--- a/PythonGuru/app/src/main/res/layout/activity_lessons.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_lessons.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".LessonsActivity">
+        tools:context=".LessonsActivity" android:background="@color/colorPrimaryDark">
 
     <TextView
             android:text="@string/lessons"
@@ -15,14 +15,15 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.093"/>
+            app:layout_constraintVertical_bias="0.093" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/lesson_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lesson1" android:layout_marginTop="156dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp"/>
+            android:layout_marginStart="56dp" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <Button
             android:text="@string/lesson_2"
             android:layout_width="wrap_content"
@@ -30,14 +31,16 @@
             android:id="@+id/lesson2" app:layout_constraintStart_toEndOf="@+id/lesson1"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="156dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.656"/>
+            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/lesson_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/lesson3" android:layout_marginTop="72dp"
             app:layout_constraintTop_toBottomOf="@+id/lesson1" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp"/>
+            android:layout_marginStart="56dp" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <Button
             android:text="@string/lesson_3"
             android:layout_width="wrap_content"
@@ -45,7 +48,8 @@
             android:id="@+id/lesson4" app:layout_constraintStart_toEndOf="@+id/lesson3"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/lesson2"
-            app:layout_constraintHorizontal_bias="0.656"/>
+            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/lesson_5"
             android:layout_width="wrap_content"
@@ -53,7 +57,8 @@
             android:id="@+id/lesson5" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/lesson3" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" app:layout_constraintVertical_bias="0.201"/>
+            android:layout_marginStart="56dp" app:layout_constraintVertical_bias="0.201"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/lesson_6"
             android:layout_width="wrap_content"
@@ -61,5 +66,6 @@
             android:id="@+id/lesson6" android:layout_marginTop="76dp"
             app:layout_constraintTop_toBottomOf="@+id/lesson4" app:layout_constraintStart_toEndOf="@+id/lesson5"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.656"/>
+            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
