--- a/PythonGuru/app/src/main/res/layout/activity_main.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity" android:id="@+id/loginForm">
+        tools:context=".MainActivity" android:id="@+id/loginForm" android:background="@color/colorPrimaryDark">
     <TextView
             android:text="@string/loginFormTitleText"
             android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
             app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.203"/>
+            app:layout_constraintVertical_bias="0.203" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/linkToRegisterForm"
             android:layout_width="wrap_content"
@@ -23,7 +23,8 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="52dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginButton"
-            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.712"/>
+            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.712"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/submitButton"
             android:layout_width="wrap_content"
@@ -32,13 +33,15 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.472" android:layout_marginTop="72dp"
             app:layout_constraintTop_toBottomOf="@+id/editText4" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.021"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.021"
+            android:textColor="@android:color/white" android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/usernameField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/username" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="44dp"
-            android:layout_marginTop="280dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="280dp" app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/passwordFieldText"
             android:layout_width="wrap_content"
@@ -46,7 +49,8 @@
             android:id="@+id/password" android:layout_marginTop="120dp"
             app:layout_constraintTop_toBottomOf="@+id/username" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="48dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
+            android:textColor="@android:color/white"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +59,8 @@
             android:id="@+id/editText3"
             app:layout_constraintStart_toEndOf="@+id/username" android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="184dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.506"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.506"
+            android:background="@color/colorPrimary"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -64,5 +69,6 @@
             android:id="@+id/editText4"
             app:layout_constraintStart_toEndOf="@+id/password" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="96dp"
-            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintHorizontal_bias="0.486"/>
+            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintHorizontal_bias="0.486"
+            android:background="@color/colorPrimary"/>
 </android.support.constraint.ConstraintLayout>
