--- a/PythonGuru/app/src/main/res/layout/activity_profile.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ProfileActivity">
+        tools:context=".ProfileActivity" android:background="@color/colorPrimaryDark">
 
     <TextView
             android:text="@string/your_profile"
@@ -13,7 +13,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView4" android:layout_marginTop="52dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/change_password"
             android:layout_width="wrap_content"
@@ -24,7 +25,8 @@
             android:layout_marginStart="8dp" android:layout_marginBottom="156dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.472"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/repeatPasswordField"
-            app:layout_constraintVertical_bias="1.0"/>
+            app:layout_constraintVertical_bias="1.0" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,16 +35,17 @@
             android:id="@+id/newPasswordField" android:layout_marginTop="244dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/repeatPasswordField" android:layout_marginTop="104dp"
+            android:id="@+id/repeatPasswordField" android:layout_marginTop="132dp"
             app:layout_constraintTop_toBottomOf="@+id/newPasswordField" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"
+            app:layout_constraintHorizontal_bias="0.497"/>
     <TextView
             android:text="@string/new_password"
             android:layout_width="wrap_content"
@@ -50,7 +53,7 @@
             android:id="@+id/newPasswordView" android:layout_marginTop="208dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/repeat_password"
             android:layout_width="wrap_content"
@@ -59,5 +62,5 @@
             app:layout_constraintTop_toBottomOf="@+id/newPasswordView" android:layout_marginTop="132dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
