--- a/PythonGuru/app/src/main/res/layout/activity_progress.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_progress.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ProgressActivity">
+        tools:context=".ProgressActivity" android:background="@color/colorPrimaryDark">
 
     <TextView
             android:text="@string/your_progress"
@@ -15,7 +15,8 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"/>
+            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"
+            android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_1"
             android:layout_width="wrap_content"
@@ -23,7 +24,7 @@
             android:id="@+id/test1" android:layout_marginTop="160dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_2"
             android:layout_width="wrap_content"
@@ -31,7 +32,7 @@
             android:id="@+id/test2" android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/test1" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_3"
             android:layout_width="wrap_content"
@@ -40,7 +41,7 @@
             android:layout_marginTop="52dp"
             app:layout_constraintTop_toBottomOf="@+id/test2" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_4"
             android:layout_width="wrap_content"
@@ -48,7 +49,7 @@
             android:id="@+id/test4" android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/test3" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_5"
             android:layout_width="wrap_content"
@@ -56,7 +57,7 @@
             android:id="@+id/test5" android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/test4" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_6"
             android:layout_width="wrap_content"
@@ -64,7 +65,7 @@
             android:id="@+id/test6" android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/test5" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156"/>
+            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/mark_7"
             android:layout_width="wrap_content"
@@ -73,7 +74,8 @@
             app:layout_constraintTop_toBottomOf="@+id/test6" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.166" app:layout_constraintVertical_bias="0.429"/>
+            app:layout_constraintHorizontal_bias="0.166" app:layout_constraintVertical_bias="0.429"
+            android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/comment_1"
             android:layout_width="wrap_content"
@@ -81,7 +83,8 @@
             android:id="@+id/comment1" android:layout_marginTop="188dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164"/>
+            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment_2"
             android:layout_width="wrap_content"
@@ -89,7 +92,8 @@
             android:id="@+id/comment2" android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/comment1" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164"/>
+            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment_4"
             android:layout_width="69dp"
@@ -98,7 +102,8 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.159" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment3"/>
+            app:layout_constraintTop_toBottomOf="@+id/comment3" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment_5"
             android:layout_width="wrap_content"
@@ -106,7 +111,8 @@
             android:id="@+id/comment5" android:layout_marginTop="64dp"
             app:layout_constraintTop_toBottomOf="@+id/comment4" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.167"/>
+            app:layout_constraintHorizontal_bias="0.167" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment_6"
             android:layout_width="wrap_content"
@@ -114,7 +120,8 @@
             android:id="@+id/comment6" android:layout_marginTop="60dp"
             app:layout_constraintTop_toBottomOf="@+id/comment5" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164"/>
+            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment_7"
             android:layout_width="wrap_content"
@@ -123,7 +130,8 @@
             app:layout_constraintTop_toBottomOf="@+id/comment6" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.164" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
+            android:textColor="@android:color/white" android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/comment3"
             android:layout_width="wrap_content"
@@ -131,5 +139,6 @@
             android:id="@+id/comment3" android:layout_marginTop="52dp"
             app:layout_constraintTop_toBottomOf="@+id/comment2" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.16"/>
+            app:layout_constraintHorizontal_bias="0.16" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"/>
 </android.support.constraint.ConstraintLayout>
