--- a/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".QuizzesActivity">
+        tools:context=".QuizzesActivity" android:background="@color/colorPrimaryDark">
 
     <TextView
             android:text="@string/tests"
@@ -13,13 +13,14 @@
             android:layout_height="wrap_content"
             android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
-            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_2"
             android:layout_width="wrap_content"
@@ -27,14 +28,16 @@
             android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.543"/>
+            app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/button4" android:layout_marginTop="84dp"
             app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="68dp"/>
+            android:layout_marginStart="68dp" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_4"
             android:layout_width="wrap_content"
@@ -42,7 +45,8 @@
             android:id="@+id/button5" android:layout_marginTop="84dp"
             app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button4"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.543"/>
+            app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_5"
             android:layout_width="wrap_content"
@@ -50,7 +54,8 @@
             android:id="@+id/button6" android:layout_marginTop="88dp"
             app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="68dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_6"
             android:layout_width="wrap_content"
@@ -60,7 +65,8 @@
             android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button6"
             android:layout_marginStart="8dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintHorizontal_bias="0.543"
-            app:layout_constraintVertical_bias="0.963"/>
+            app:layout_constraintVertical_bias="0.963" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"/>
     <Button
             android:text="@string/final_test"
             android:layout_width="wrap_content"
@@ -69,5 +75,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.416"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
