--- a/PythonGuru/app/src/main/res/layout/activity_register.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".RegisterActivity" android:id="@+id/registerForm">
+        tools:context=".RegisterActivity" android:id="@+id/registerForm" android:background="@color/colorPrimaryDark">
 
     <TextView
             android:text="@string/registerFormTitle"
@@ -15,17 +15,19 @@
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="0.096"/>
+            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="0.096"
+            android:textColor="@android:color/white"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/newUsername"
-            app:layout_constraintStart_toEndOf="@+id/username2"
-            android:layout_marginStart="40dp" android:layout_marginTop="324dp"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="324dp"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.845"/>
     <Button
             android:text="@string/registerButton"
             android:layout_width="wrap_content"
@@ -35,17 +37,19 @@
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.498"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/newPassword"/>
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/newPassword"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/newPassword"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="56dp"
             app:layout_constraintTop_toBottomOf="@+id/newUsername" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/password2"
-            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.526"/>
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.508"
+            android:background="@color/colorPrimary"/>
     <TextView
             android:text="@string/newUsername"
             android:layout_width="wrap_content"
@@ -53,7 +57,8 @@
             android:id="@+id/username2"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="60dp"
-            android:layout_marginTop="324dp" app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_marginTop="324dp" app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@android:color/white"/>
     <TextView
             android:text="@string/newPasssword"
             android:layout_width="wrap_content"
@@ -61,5 +66,5 @@
             android:id="@+id/password2" android:layout_marginStart="56dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/username2"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.152"/>
+            app:layout_constraintVertical_bias="0.152" android:textColor="@android:color/white"/>
 </android.support.constraint.ConstraintLayout>
