--- a/PythonGuru/app/src/main/res/layout/activity_final_quiz.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_final_quiz.xml
@@ -7,16 +7,6 @@
         android:layout_height="match_parent"
         tools:context=".FinalQuizActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/your_final_quiz"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/finalQuizView" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5"
-    />
     <ScrollView
             android:layout_width="395dp"
             android:layout_height="688dp"
@@ -25,74 +15,146 @@
             app:layout_constraintBottom_toBottomOf="parent">
         <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                       android:orientation="vertical">
-            <Button
+            <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/button5"/>
-            <Button
+                    android:layout_height="wrap_content" android:id="@+id/textView92"/>
+            <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/button6"/>
-            <Button
+                    android:layout_height="wrap_content" android:id="@+id/textView91"/>
+            <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/button7"/>
-            <Button
+                    android:layout_height="wrap_content" android:id="@+id/textView90"/>
+            <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:id="@+id/button8"/>
+                    android:layout_height="wrap_content" android:id="@+id/textView89"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView88"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView87"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView86"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView85"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView84"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView83"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView82"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView81"/>
+            <TextView
+                    android:text="@string/your_final_quiz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/finalQuizView"
+                    tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="307dp"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq1"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView67"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq2"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView68"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq3"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView69"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq4"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView70"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq5"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView71"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq6"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView72"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq7"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView73"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq8"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView74"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq9"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView75"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq10"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView76"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq11"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView77"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq12"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView78"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq13"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView79"/>
             <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" android:id="@+id/fq14"
                     android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/textView80"/>
             <Button
                     android:text="@string/finished_final_quiz"
                     android:layout_width="match_parent"
