--- a/PythonGuru/app/src/main/res/layout/activity_lesson.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_lesson.xml
@@ -7,32 +7,42 @@
         android:layout_height="match_parent"
         tools:context=".LessonActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/curr_esson_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/currentLesson" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/lessonBody"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lessonBody"
-            android:background="@color/colorPrimary" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/currentLesson" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="0.095"
-            app:layout_constraintBottom_toTopOf="@+id/visitsText"/>
-    <TextView
-            android:text="@string/visits_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/visitsText" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="260dp"
-            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.31"
-            app:layout_constraintTop_toBottomOf="@+id/lessonBody"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="377dp"
+            android:layout_height="547dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView123"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView122"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView121"/>
+        <TextView
+                android:text="@string/curr_esson_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/currentLesson"
+                tools:layout_editor_absoluteY="60dp" tools:layout_editor_absoluteX="359dp"/>
+        <TextView
+                android:text="@string/visits_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/visitsText"
+                tools:layout_editor_absoluteY="365dp" tools:layout_editor_absoluteX="368dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView112"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/lessonBody"
+                android:background="@color/colorPrimary"
+                tools:layout_editor_absoluteY="331dp" tools:layout_editor_absoluteX="303dp"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
