--- a/PythonGuru/app/src/main/res/layout/activity_lessons.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_lessons.xml
@@ -7,71 +7,109 @@
         android:layout_height="match_parent"
         tools:context=".LessonsActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/lessons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView7" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+    <ScrollView
+            android:layout_width="395dp"
+            android:layout_height="716dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintVertical_bias="0.093" android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/lesson_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson1" android:layout_marginTop="156dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="72dp" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary" app:layout_constraintBottom_toTopOf="@+id/lesson4"/>
-    <Button
-            android:text="@string/lesson_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson2" app:layout_constraintStart_toEndOf="@+id/lesson1"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="156dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white" app:layout_constraintBottom_toTopOf="@+id/lesson3"/>
-    <Button
-            android:text="@string/lesson_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson5"
-            android:layout_marginBottom="296dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="72dp"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lesson4"
-    />
-    <Button
-            android:text="@string/lesson_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson6"
-            app:layout_constraintStart_toEndOf="@+id/lesson5"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="296dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lesson3"/>
-    <Button
-            android:text="@string/lesson_4_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson4" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/lesson1" android:layout_marginStart="72dp"
-            app:layout_constraintStart_toStartOf="parent"
-    />
-    <Button
-            android:text="@string/lesson_3_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson3" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary" android:layout_marginTop="48dp"
-            app:layout_constraintTop_toBottomOf="@+id/lesson2" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/lesson4"
-            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.503"
-    />
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button31"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button32"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button33"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button40"
+                    android:background="@color/colorPrimaryDark"/>
+            <TextView
+                    android:text="@string/lessons"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView7"
+                    android:textColor="@android:color/white" tools:layout_editor_absoluteY="8dp"
+                    tools:layout_editor_absoluteX="351dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button22"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson1"
+                    android:textColor="@android:color/white"
+                    android:background="@color/colorPrimary" tools:layout_editor_absoluteY="156dp"
+                    tools:layout_editor_absoluteX="72dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button23"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson2"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@android:color/white" tools:layout_editor_absoluteY="264dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button24"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_3_txt"
+                    android:layout_width="431dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson3" android:textColor="@android:color/white"
+                    android:background="@color/colorPrimary"
+                    tools:layout_editor_absoluteY="96dp" tools:layout_editor_absoluteX="168dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button25"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_4_txt"
+                    android:layout_width="406dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson4" android:textColor="@android:color/white"
+                    android:background="@color/colorPrimary"
+                    tools:layout_editor_absoluteY="252dp" tools:layout_editor_absoluteX="72dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button26"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_5"
+                    android:layout_width="422dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson5"
+                    android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                    tools:layout_editor_absoluteY="387dp" tools:layout_editor_absoluteX="72dp"/>
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/button27"
+                    android:background="@color/colorPrimaryDark"/>
+            <Button
+                    android:text="@string/lesson_6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/lesson6"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@android:color/white"
+                    tools:layout_editor_absoluteY="152dp" tools:layout_editor_absoluteX="315dp"/>
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
