--- a/PythonGuru/app/src/main/res/layout/activity_main_menu.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_main_menu.xml
@@ -6,60 +6,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainMenuActivity" android:background="?attr/colorPrimaryDark">
-    <TextView
-            android:text="@string/mainMenuTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView5" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.476" app:layout_constraintVertical_bias="0.096"
-            android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/lessonsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lessonsButton" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/progressButton" android:layout_marginEnd="8dp"
-            android:layout_marginTop="216dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.544" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/progressButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/progressButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="88dp"
-            android:layout_marginTop="216dp" app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/testsButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/testsButton" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/lessonsButton" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="76dp" app:layout_constraintVertical_bias="0.165"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/profileButton"
-            android:layout_width="139dp"
-            android:layout_height="42dp"
-            android:id="@+id/profileButton" app:layout_constraintStart_toEndOf="@+id/testsButton"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/progressButton"
-            app:layout_constraintHorizontal_bias="0.426" app:layout_constraintVertical_bias="0.167"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/welcomeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/welcomeText" android:layout_marginTop="36dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.48" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.019"
-            android:textColor="@android:color/white"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="379dp"
+            android:layout_height="555dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+                android:text="@string/mainMenuTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView5"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteY="8dp"/>
+        <TextView
+                android:text="@string/welcomeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/welcomeText" android:layout_marginTop="36dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.48" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.019"
+                android:textColor="@android:color/white"/>
+        <Button
+                android:text="@string/progressButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressButton"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="216dp" tools:layout_editor_absoluteX="235dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView20"/>
+        <Button
+                android:text="@string/profileButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/profileButton"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="272dp" tools:layout_editor_absoluteX="172dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView21"/>
+        <Button
+                android:text="@string/lessonsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/lessonsButton"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteY="216dp"
+                tools:layout_editor_absoluteX="8dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView22"/>
+        <Button
+                android:text="@string/testsButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/testsButton"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="272dp" tools:layout_editor_absoluteX="76dp"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
