--- a/PythonGuru/app/src/main/res/layout/activity_profile.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_profile.xml
@@ -7,60 +7,102 @@
         android:layout_height="match_parent"
         tools:context=".ProfileActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/your_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView4" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/change_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/changePassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginBottom="156dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.472"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/repeatPasswordField"
-            app:layout_constraintVertical_bias="1.0" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/newPasswordField" android:layout_marginTop="244dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:ems="10"
-            android:id="@+id/repeatPasswordField" android:layout_marginTop="132dp"
-            app:layout_constraintTop_toBottomOf="@+id/newPasswordField" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"
-            app:layout_constraintHorizontal_bias="0.497"/>
-    <TextView
-            android:text="@string/new_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/newPasswordView" android:layout_marginTop="208dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/repeat_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/repeatPasswordView"
-            app:layout_constraintTop_toBottomOf="@+id/newPasswordView" android:layout_marginTop="132dp"
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="374dp"
+            android:layout_height="629dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.0" android:textColor="@android:color/white"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView60"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView59"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView58"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView57"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView56"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView55"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView54"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView53"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView52"/>
+        <TextView
+                android:text="@string/your_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteY="52dp"
+                tools:layout_editor_absoluteX="277dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView61"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView62"/>
+        <TextView
+                android:text="@string/new_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/newPasswordView"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="208dp" tools:layout_editor_absoluteX="310dp"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/newPasswordField"
+                android:background="@color/colorPrimary"
+                tools:layout_editor_absoluteY="244dp" tools:layout_editor_absoluteX="8dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView64"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView63"/>
+        <TextView
+                android:text="@string/repeat_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/repeatPasswordView"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="359dp" tools:layout_editor_absoluteX="8dp"/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:ems="10"
+                android:id="@+id/repeatPasswordField"
+                android:background="@color/colorPrimary"
+                tools:layout_editor_absoluteY="400dp" tools:layout_editor_absoluteX="8dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView66"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView65"/>
+        <Button
+                android:text="@string/change_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/changePassword"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="432dp"
+                tools:layout_editor_absoluteX="269dp"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
