--- a/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
@@ -7,81 +7,105 @@
         android:layout_height="match_parent"
         tools:context=".QuizzesActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/tests"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/test_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz1" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
-            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/test_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz2" app:layout_constraintStart_toEndOf="@+id/quiz1"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/test_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz3"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="68dp" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white" android:layout_marginTop="92dp"
-            app:layout_constraintTop_toBottomOf="@+id/quiz1"/>
-    <Button
-            android:text="@string/test_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz4"
-            app:layout_constraintStart_toEndOf="@+id/quiz3"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white" android:layout_marginTop="92dp"
-            app:layout_constraintTop_toBottomOf="@+id/quiz2"/>
-    <Button
-            android:text="@string/test_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz5"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="68dp" android:layout_marginBottom="232dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"
-            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/quiz3"
-            app:layout_constraintVertical_bias="1.0"/>
-    <Button
-            android:text="@string/test_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz6" android:layout_marginBottom="232dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/quiz5"
-            android:layout_marginStart="8dp"
-            app:layout_constraintHorizontal_bias="0.543"
-            android:background="@color/colorPrimary"
-            android:textColor="@android:color/white" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/quiz4" app:layout_constraintVertical_bias="1.0"/>
-    <Button
-            android:text="@string/final_test"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/quiz7"
-            android:layout_marginBottom="120dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"
-            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.996"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="372dp"
+            android:layout_height="696dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.478"
+            app:layout_constraintVertical_bias="0.578" app:layout_constraintTop_toTopOf="parent">
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button13"
+                android:background="@color/colorPrimaryDark"/>
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button12"
+                android:background="@color/colorPrimaryDark"/>
+        <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/button11"
+                android:background="@color/colorPrimaryDark"/>
+        <TextView
+                android:text="@string/tests"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteY="40dp"
+                tools:layout_editor_absoluteX="369dp"/>
+        <Button
+                android:text="@string/test_1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz1"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteX="68dp" tools:layout_editor_absoluteY="180dp"
+        />
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView113"/>
+        <Button
+                android:text="@string/test_2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz2"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteX="164dp"
+                tools:layout_editor_absoluteY="180dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView114"/>
+        <Button
+                android:text="@string/test_3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz3"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="320dp" tools:layout_editor_absoluteX="68dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView116"/>
+        <Button
+                android:text="@string/test_4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz4"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="320dp" tools:layout_editor_absoluteX="315dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView117"/>
+        <Button
+                android:text="@string/test_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz5"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="376dp" tools:layout_editor_absoluteX="68dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView118"/>
+        <Button
+                android:text="@string/test_6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz6"
+                android:background="@color/colorPrimary"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="451dp" tools:layout_editor_absoluteX="164dp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView119"/>
+        <Button
+                android:text="@string/final_test"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/quiz7"
+                android:background="@color/colorPrimary" android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="563dp" tools:layout_editor_absoluteX="315dp"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
